[gd_scene load_steps=6 format=3 uid="uid://b6g75bsnqsv8p"]

[ext_resource type="Script" path="res://heist_client.gd" id="1_bemqt"]

[sub_resource type="Theme" id="Theme_14gmh"]

[sub_resource type="InputEventAction" id="InputEventAction_fet2w"]
action = &"up"

[sub_resource type="Shortcut" id="Shortcut_ka5si"]
events = [SubResource("InputEventAction_fet2w")]

[sub_resource type="Shortcut" id="Shortcut_p7sma"]

[node name="HeistClient" type="Node2D"]
script = ExtResource("1_bemqt")

[node name="Panel" type="Panel" parent="."]
offset_right = 920.0
offset_bottom = 495.0

[node name="UpButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 187.0
offset_top = 172.0
offset_right = 277.0
offset_bottom = 232.0
theme = SubResource("Theme_14gmh")
shortcut = SubResource("Shortcut_ka5si")
text = "UP"
metadata/_edit_group_ = true

[node name="DownButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 188.0
offset_top = 250.0
offset_right = 278.0
offset_bottom = 310.0
text = "DOWN"
metadata/_edit_group_ = true

[node name="LeftButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 76.0
offset_top = 250.0
offset_right = 166.0
offset_bottom = 310.0
text = "LEFT"
metadata/_edit_group_ = true

[node name="RightButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 300.0
offset_top = 250.0
offset_right = 390.0
offset_bottom = 310.0
text = "RIGHT"
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 364.0
offset_top = 438.0
offset_right = 552.0
offset_bottom = 472.0
text = "Connect"

[node name="TextureButton" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
shortcut = SubResource("Shortcut_p7sma")

[connection signal="pressed" from="Panel/UpButton" to="." method="_on_up_button_pressed"]
[connection signal="button_down" from="Panel/DownButton" to="." method="_on_down_button_button_down"]
[connection signal="pressed" from="Panel/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="Panel/RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
